--- a/frontend/src/app/components/main-content/main-content.component.html
+++ b/frontend/src/app/components/main-content/main-content.component.html
@@ -5,7 +5,7 @@
       <button mat-icon-button (click)="toggleSidebar()">
         <mat-icon>menu</mat-icon>
       </button>
-      <h5 class="toolbar-title">Banking Assistant</h5>
+      <h5 class="toolbar-title">Zava Rewards Assistant</h5>
     </div>
     <span class="toolbar-spacer"></span>
     <div class="custom-container">
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="agent-info">
-                  <mat-icon class="highlight-icon">person</mat-icon> Agent: {{ conversation.sender || 'Banking Assistant' }}
+                  <mat-icon class="highlight-icon">person</mat-icon> Agent: {{ conversation.sender || 'Zava Rewards Assistant' }}
                 </div>
               </div>
             </div>
