update login component and data structure

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -11,10 +11,11 @@
           <mat-form-field appearance="fill">
             <mat-label>Select a user</mat-label>
             <mat-select [(value)]="selectedUser" (selectionChange)="onSelectionChangeUser($event)">
-              <mat-option value="Mark">Mark</mat-option>
-              <mat-option value="Theo">Theo</mat-option>
-              <mat-option value="Sajee">Sajee</mat-option>
-              <mat-option value="Sandeep">Sandeep</mat-option>
+              <mat-option value="kim.lambert">Kim Lambert</mat-option>
+              <mat-option value="charlotte.nguyen">Charlotte Nguyen</mat-option>
+              <mat-option value="miguel.garcia">Miguel Garcia</mat-option>
+              <mat-option value="krystal.mckinney">Krystal McKinney</mat-option>
+              <mat-option value="tim.de.boer">Tim De Boer</mat-option>
             </mat-select>
           </mat-form-field>
 
@@ -22,10 +23,10 @@
 
       <div class="input-group">
         <mat-form-field appearance="fill">
-          <mat-label>Select a company</mat-label>
+          <mat-label>Select a program</mat-label>
           <mat-select [(value)]="selectedCompany" (selectionChange)="onSelectionChangeCompany($event)">
-            <mat-option value="Contoso">Contoso</mat-option>
-            <mat-option value="Fabrikan">Fabrikan</mat-option>
+            <mat-option value="Zava Personal">Zava Personal</mat-option>
+            <mat-option value="Zava Business">Zava Business</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
