populate log in page

--- a/frontend/src/app/components/chat-options/chat-options.component.html
+++ b/frontend/src/app/components/chat-options/chat-options.component.html
@@ -1,5 +1,5 @@
 <div  class="user-greating">
-  <p class="greeting-name"> Hi, {{ loggedInUser }}!</p>
+  <p class="greeting-name"> Hi, {{ loggedInUserName }}!</p>
   <p>How can I help you with your rewards today?</p>
 </div>
 <div (click)="createNewSession()" class="subject-container">
